Opened 19 years ago

Closed 18 years ago

#658 closed bug (fixed)

Inline input is broken

Reported by: koki@… Owned by: korli
Priority: normal Milestone: R1
Component: - General Version:
Keywords: Cc: bxi07354@…
Blocked By: Blocking:
Platform: All

Description (last modified by axeld)

The Japanese input method CannaIM is now working in Haiku, but it turns out that inline input in Haiku seems to be broken.

I tested entering Japanese text using CannaIM on various applications that are inline input-enabled (for ex., StyledEdit and Vision), and in all cases inline input does not work.

Change History (15)

comment:1 by korli, 19 years ago

Cc: bxi07354@… added

comment:2 by korli, 19 years ago

I applied a preliminary fix in revision 17723. Though it's not enough when switching between windows.

comment:3 by koki@…, 19 years ago

Just a hunch, but could http://haiku-os.org/bugzilla/show_bug.cgi?id=154 be related?

comment:4 by koki@…, 19 years ago

I can confirm that after the preliminary fix in revision 17723, inline input is working again.

The issue when switching windows still exists; should we close this bug and address the remaining problems in a separate bug? Or do we keep this one open?

comment:5 by korli, 19 years ago

I still don't know why it happens. Stefano, does this happen with our BTextView on R5 ?

comment:6 by korli, 19 years ago

Cc: stefano.ceccherini@… added

comment:7 by jackburton, 19 years ago

I haven't tried, and I can't try at the moment, sorry.

comment:8 by jackburton, 19 years ago

Does this still happen ?

comment:9 by korli, 19 years ago

The issue when switching windows still exists.

comment:10 by axeld, 18 years ago

Description: modified (diff)
Platform: All

Does switching windows now work as expected? I think I've fixed it in hrev19118, can anyone confirm?

comment:11 by korli, 18 years ago

Still reproduced here in revision 19142. Use StyledEdit, enter characters with the IM (without the bottom line window), then switch to Terminal, no character can be input.

comment:12 by axeld, 18 years ago

Can you use another application, ie. another StyledEdit window, or some other non-IM-aware view? Terminal seems to be broken for non-ASCII characters.

comment:13 by axeld, 18 years ago

Resolution: fixed
Status: newclosed

Switching windows should now work fine (in hrev19160).

comment:14 by korli, 18 years ago

Resolution: fixed
Status: closedreopened

Tested :

  • switching between two StyledEdit window works correctly
  • but switching between a StyledEdit window and a Terminal window still doesn't bring the bottom line window and vice-et-versa. Must be related to IM aware/non aware view events not received by the input_server

comment:15 by korli, 18 years ago

Resolution: fixed
Status: reopenedclosed

Hopefully switching between a StyledEdit window and a Terminal window now works in revision 19166.

Note: See TracTickets for help on using tickets.