begin to fix bug #658: makes use of BWindow::_SetFocus() in BView::MakeFocus() BWindow::_KeyboardNavigation() now uses BView::MakeFocus() This is though not enough: _SetFocus isn't called on window activation/deactivation, thus the input server isn't aware of a focus view change in this case.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@17723 a95241bf-73f2-0310-859d-f6bbb57e9c96